[tool.poetry]
name = "gonogo"
version = "0.1.0"
description = ""
authors = ["simeonreusch <simeon.reusch@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gcn-kafka = "^0.3.2"
slackeventsapi = "^3.0.1"
slackclient = "^2.9.4"
astropy = "^5.3"
numpy = "^1.24.3"
astropy-healpix = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88